--- a/01-cards-sources/index.html
+++ b/01-cards-sources/index.html
@@ -10,42 +10,44 @@
 <div class="container">
   <div
       class="slide"
-      style="background-image: url('https://images.unsplash.com/photo-1583121274602-3e2820c69888?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');"
+      style="background-image: url('https://images.unsplash.com/photo-1556189250-72ba954cfc2b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80');"
   >
-    <h3>Ferrari</h3>
+    <h3>bmw</h3>
+  </div>
+  <div
+      class="slide active"
+      style="
+          background-image: url('https://images.unsplash.com/photo-1549632891-a0bea6d0355b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80');
+    "
+    >
+    <h3>Range</h3>
+  </div>
+  <divueuk
+      class="slide"
+      style="
+          background-image: url('https://images.unsplash.com/photo-1611157817876-3b8ceb8c8bd7?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80');
+        "
+  >
+    <h3>Porshe</h3>
+  </divueuk>
+  <div
+      class="slide "
+      style="
+          background-image: url('https://images.unsplash.com/photo-1520050206274-a1ae44613e6d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80');
+        "
+  >
+    <h3>Audi</h3>
   </div>
   <div
       class="slide"
       style="
-          background-image: url('https://images.unsplash.com/photo-1573950940509-d924ee3fd345?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1696&q=80');
+          background-image: url('https://images.unsplash.com/photo-1489824904134-891ab64532f1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80');
         "
   >
-    <h3>Lamborghini</h3>
-  </div>
-  <div
-      class="slide"
-      style="
-          background-image: url('https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1694&q=80');
-        "
-  >
-    <h3>Camaro</h3>
-  </div>
-  <div
-      class="slide"
-      style="
-          background-image: url('https://images.unsplash.com/photo-1535732820275-9ffd998cac22?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1650&q=80');
-        "
-  >
-    <h3>Aston</h3>
-  </div>
-  <div
-      class="slide"
-      style="
-          background-image: url('https://images.unsplash.com/photo-1554744512-d6c603f27c54?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');
-        "
-  >
-    <h3>Tesla</h3>
+    <h3>Juke</h3>
   </div>
 </div>
+
+<script src="app.js"></script>
 </body>
 </html>
