--- a/03-slider-sources/index.html
+++ b/03-slider-sources/index.html
@@ -14,41 +14,41 @@
     <div class="container">
       <div class="sidebar">
         <div style="background: linear-gradient(229.99deg, #11DEE9 -26%, #017E8B 145%);">
-          <h1>Snow in the desert</h1>
-          <p>Love, death & robots</p>
+          <h1>Snork</h1>
+          <p>Losser</p>
         </div>
         <div style="background: linear-gradient(215.32deg, #F90306 -1%, #9E0706 124%);">
-          <h1>Life Hutch</h1>
-          <p>Love, death & robots</p>
+          <h1>Life </h1>
+          <p>Lover</p>
         </div>
         <div style="background: linear-gradient(221.87deg, #8308EA 1%, #5305AF 128%);">
-          <h1>Zima Blue</h1>
-          <p>Love, death & robots</p>
+          <h1>Blue</h1>
+          <p>Lo</p>
         </div>
         <div style="background: linear-gradient(220.16deg, #FFE101 -8%, #F39102 138%);">
-          <h1>Automated Customer Service</h1>
-          <p>Love, death & robots</p>
+          <h1>High</h1>
+          <p>Love</p>
         </div>
       </div>
       <div class="main-slide">
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1996&q=80');
+            background-image: url('https://images.unsplash.com/photo-1632228737456-f76b14fc0071?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzfHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
           "
         ></div>
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2023&q=80');
+            background-image: url('https://images.unsplash.com/photo-1632177159276-5439f42b7711?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNXx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
           "
         ></div>
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1501529301789-b48c1975542a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+            background-image: url('https://images.unsplash.com/photo-1632221633738-73c9eb5b8c92?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxN3x8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
           "
         ></div>
         <div
           style="
-            background-image: url('https://images.unsplash.com/photo-1520263115673-610416f52ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');
+            background-image: url('https://images.unsplash.com/photo-1632251431418-b4e5fe2410b0?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60');
           "
         ></div>
       </div>
